<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.MainActivity"
    >

    <ImageView
        android:id="@+id/bg1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:src="@drawable/bg_rain"
        tools:visibility="visible"
        tools:ignore="ContentDescription"
        />

    <ImageView
        android:id="@+id/bg2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:src="@drawable/bg_snow"
        tools:visibility="visible"
        tools:ignore="ContentDescription"
        />

<!--titleLL    -->
    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="48dp"
        >


    <!--LocationIV    -->
        <ImageView
            android:id="@+id/locationIV"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/v_location_bg"
            android:src="@drawable/v_location"
            app:tint="@color/colorPrimary"

            android:layout_marginStart="16sp"
            android:layout_marginEnd="4dp"

            android:visibility="invisible"
            tools:ignore="ContentDescription"
            />


    <!--Place-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/city_name"
            app:hintTextColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorPrimary"
            app:boxBackgroundMode="none"
            >

            <AutoCompleteTextView
                android:id="@+id/placeNameEditText"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:singleLine="true"
                android:maxEms="15"
                android:ellipsize="start"
                android:scaleY="1.2"
                android:imeOptions="actionSearch"

                android:shadowColor="@android:color/background_dark"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="5"

                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="28dp"
                android:textStyle="bold"

                tools:ignore="LabelFor,SpUsage"
                tools:text="Novorossisk.Ru"
                />
        </com.google.android.material.textfield.TextInputLayout>

    <!--FavoriteImageButton    -->
        <ImageButton
            android:id="@+id/favoriteImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:contentDescription="@string/to_favorites"

            android:background="@drawable/white_ring_bg"
            android:padding="12dp"
            android:src="@drawable/v_favorite_border"
            app:tint="@color/colorPrimary"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

    </LinearLayout>


<!--contentLayout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:focusable="true"

        tools:visibility="visible"
        >

    <!--temperature    -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="56dp"
            android:scaleY="2"
            android:textStyle="italic"
            android:textColor="@color/colorSecondary"

            android:shadowColor="@android:color/background_dark"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="30"

            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage"
            tools:text="+7\u2103"
            />

        <!--iconImageView    -->
        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/v_snow"
            android:background="@drawable/r_gradient_bg"
            android:padding="24dp"

            android:layout_marginTop="12dp"

            app:layout_constraintStart_toEndOf="@id/temperatureTextView"
            app:layout_constraintBottom_toBottomOf="@id/temperatureTextView"
            app:layout_constraintTop_toTopOf="@id/temperatureTextView"
            android:contentDescription="@string/weather_icon"
            />

    <!--weatherDescription    -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/weatherDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:textStyle="italic"

            android:shadowRadius="10"
            android:shadowColor="@android:color/background_dark"
            android:shadowDx="10"
            android:shadowDy="10"

            android:layout_marginEnd="16dp"

            app:layout_constraintStart_toEndOf="@id/iconImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/temperatureTextView"

            tools:text="thunderstorm with heavy drizzle "
            />

    <!--it_feels_like    -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/feelingTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/it_feels_like"
            android:textColor="@color/colorSecondary"
            android:textSize="20sp"
            android:textStyle="italic"
            android:background="@null"

            android:shadowRadius="15"
            android:shadowColor="@android:color/background_dark"
            android:shadowDx="10"
            android:shadowDy="10"

            android:layout_marginEnd="12dp"
            android:layout_marginTop="16dp"

            app:layout_constraintEnd_toStartOf="@id/effectTemperatureTextView"
            app:layout_constraintTop_toBottomOf="@id/temperatureTextView"
            />

    <!--effect_temperature    -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/effectTemperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textStyle="italic"
            android:textColor="@color/colorSecondary"
            android:scaleY="2"

            android:shadowRadius="10"
            android:shadowColor="@android:color/background_dark"
            android:shadowDx="10"
            android:shadowDy="10"

            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/feelingTV"
            tools:text="+10\u2103"
            tools:ignore="SpUsage"
            />

        <LinearLayout
            android:id="@+id/windLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginTop="24dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/humidityLL"
            app:layout_constraintTop_toBottomOf="@id/effectTemperatureTextView"
            >
        <!--windTextView    -->
            <ImageView
                android:id="@+id/windIV"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/v_wind"
                app:tint="@color/colorSecondary"
                android:background="@drawable/v_wind_bg"
                android:contentDescription="@string/wind"
                />
        <!--windIV    -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/windTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/colorSecondary"
                android:text="@string/i_wind"

                android:shadowRadius="10"
                android:shadowColor="@android:color/background_dark"
                android:shadowDx="10"
                android:shadowDy="10"

                tools:text="2.5 m/s SW"
                tools:ignore="SpUsage"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/humidityLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintStart_toEndOf="@id/windLL"
            app:layout_constraintEnd_toEndOf="@id/pressureLL"
            app:layout_constraintBottom_toBottomOf="@id/windLL"
            >

        <!--humidityIV    -->
            <ImageView
                android:id="@+id/humidityIV"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/v_humidity"
                app:tint="@color/colorSecondary"
                android:background="@drawable/v_humidity_bg"
                android:contentDescription="@string/humidity_content_description"
                />

        <!--humidityTextView   -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/humidityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/colorSecondary"
                android:text="@string/humidity"

                android:shadowRadius="10"
                android:shadowColor="@android:color/background_dark"
                android:shadowDx="10"
                android:shadowDy="10"

                tools:text="85%"
                tools:ignore="SpUsage"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pressureLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintStart_toEndOf="@id/humidityLL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/windLL"
            >

        <!--pressureIV    -->
            <ImageView
                android:id="@+id/pressureIV"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/v_pressure"
                app:tint="@color/colorSecondary"
                android:background="@drawable/v_pressure_bg"
                android:contentDescription="@string/pressure"
                />
        <!--pressureTextView   -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pressureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/colorSecondary"
                android:text="@string/humidity"

                android:shadowRadius="10"
                android:shadowColor="@android:color/background_dark"
                android:shadowDx="10"
                android:shadowDy="10"

                tools:text="753mmHg"
                tools:ignore="SpUsage"
                />
        </LinearLayout>

    <!--dayStampRecyclerView-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dayStampRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/windLL"
            tools:listitem="@layout/timestamp_layout"
            />

    <!--forecastRecyclerView    -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/forecastRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            android:layout_marginTop="24dp"

            app:layout_constraintTop_toBottomOf="@id/dayStampRecyclerView"
            tools:listitem="@layout/day_stamp_item"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--Exit && Favorites Layout    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal"

        android:layout_marginBottom="16dp"

        tools:background="#f0"
        >

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <ImageButton
            android:id="@+id/quiteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:background="@drawable/white_ring_bg"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/quite_button"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <ImageButton
            android:id="@+id/favoritesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/v_favorite"
            app:tint="@color/colorPrimary"
            android:background="@null"
            android:contentDescription="@string/favorites_list_button"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

    </LinearLayout>

<!--errorLayout-->
    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"

        tools:visibility="invisible"
        >

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold|italic"

            android:layout_margin="24dp"
            tools:text="Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: Error: "
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />


            <Button
                android:id="@+id/tryAgainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_again"
                />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />


            <Button
                android:id="@+id/exitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:indeterminateDrawable="@drawable/spinner_ring"
        android:indeterminateOnly="true"

        tools:visibility="invisible"
        />

    <include
        android:id="@+id/favoritesLayout"
        layout="@layout/favorites_layout"

        tools:visibility="invisible"
        />

</FrameLayout>