<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
        tools:background="@drawable/bg"
    >

<!--LocationIV    -->
    <ImageView
        android:id="@+id/locationIV"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/v_location"
        android:background="@drawable/v_location_bg"
        app:tint="@color/colorPrimary"

        android:layout_marginEnd="8dp"

        app:layout_constraintEnd_toStartOf="@id/textInputLayout"
        app:layout_constraintTop_toTopOf="@id/favoriteImageButton"
        android:contentDescription="@string/place_of_forecast"
        />

<!--Favorite    -->
    <ImageView
        android:id="@+id/favoriteImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/v_favorite_border"
        android:padding="12dp"
        app:tint="@color/colorPrimary"
        android:background="@drawable/white_ring_bg"

        android:layout_marginEnd="24dp"
        android:layout_marginTop="48dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/to_favorites"
        />

<!--Place-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        app:endIconMode="clear_text"

        android:layout_marginTop="24dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

<!--        <com.google.android.material.textfield.MaterialAutoCompleteTextView-->
        <AutoCompleteTextView
            android:id="@+id/placeNameEditText"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:imeOptions="actionDone"
            android:textColor="@color/colorPrimary"
            android:textSize="28dp"
            android:textStyle="bold"
            android:lines="1"
            android:maxEms="15"
            android:ellipsize="end"
            android:textAlignment="center"
            android:scaleY="1.2"

            android:shadowRadius="5"
            android:shadowColor="@android:color/background_dark"
            android:shadowDx="4"
            android:shadowDy="4"

            tools:text="Novorossisk"
            tools:ignore="SpUsage"
            />
    </com.google.android.material.textfield.TextInputLayout>

<!--placeDescription-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/placeDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:lines="1"
        android:maxEms="15"
        android:ellipsize="end"
        android:visibility="gone"

        android:textColor="@color/colorPrimary"
        android:shadowRadius="5"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="4"
        android:shadowDy="4"

        android:layout_marginTop="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"

        tools:text="Krasnodar Krai, RU"
        tools:ignore="SpUsage"
        />

<!--temperature    -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="56dp"
        android:textStyle="italic"
        android:textColor="@color/colorSecondary"
        android:scaleY="2"

        android:shadowRadius="10"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="4"
        android:shadowDy="4"

        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeDescriptionTextView"

        tools:text="+7\u2103"
        tools:ignore="SpUsage"
        android:visibility="invisible"
        tools:visibility="visible"
        />

<!--iconImageView    -->
    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/v_snow"
        android:background="@drawable/r_gradient_bg"
        android:padding="20dp"

        android:layout_marginTop="12dp"

        app:layout_constraintStart_toEndOf="@id/temperatureTextView"
        app:layout_constraintTop_toTopOf="@id/temperatureTextView"
        app:layout_constraintBottom_toBottomOf="@id/temperatureTextView"
        android:contentDescription="@string/weather_icon"

        android:visibility="invisible"
        tools:visibility="visible"
        />

<!--weatherDescription    -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/weatherDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@color/colorSecondary"

        android:layout_marginEnd="16dp"

        android:shadowRadius="5"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="4"
        android:shadowDy="4"


        app:layout_constraintStart_toEndOf="@id/iconImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/temperatureTextView"

        tools:text="thunderstorm with heavy drizzle "
        android:visibility="invisible"
        tools:visibility="visible"
        />

<!--it_feels_like    -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/feelingTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="italic"
        android:textColor="@color/colorSecondary"
        android:text="@string/it_feels_like"

        android:shadowRadius="15"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="4"
        android:shadowDy="4"

        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"

        app:layout_constraintEnd_toStartOf="@id/effectTemperatureTextView"
        app:layout_constraintTop_toBottomOf="@id/temperatureTextView"

        android:visibility="invisible"
        tools:visibility="visible"
        />

<!--effect_temperature    -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/effectTemperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:textStyle="italic"
        android:textColor="@color/colorSecondary"
        android:scaleY="2"

        android:shadowRadius="10"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="4"
        android:shadowDy="4"

        android:layout_marginEnd="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/feelingTV"
        tools:text="+10\u2103"
        tools:ignore="SpUsage"

        android:visibility="invisible"
        tools:visibility="visible"
        />

    <LinearLayout
        android:id="@+id/windLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="24dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/humidityLL"
        app:layout_constraintTop_toBottomOf="@id/effectTemperatureTextView"

        android:visibility="invisible"
        tools:visibility="visible"
        >
<!--windTextView    -->
        <ImageView
            android:id="@+id/windIV"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/v_wind"
            app:tint="@color/colorSecondary"
            android:background="@drawable/v_wind_bg"
            android:contentDescription="@string/wind"
            />
<!--windIV    -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/windTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary"
            android:text="@string/i_wind"

            android:shadowRadius="15"
            android:shadowColor="@android:color/background_dark"
            android:shadowDx="4"
            android:shadowDy="4"

            tools:text="2.5 m/s SW"
            tools:ignore="SpUsage"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/humidityLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintStart_toEndOf="@id/windLL"
        app:layout_constraintEnd_toEndOf="@id/pressureLL"
        app:layout_constraintBottom_toBottomOf="@id/windLL"

        android:visibility="invisible"
        tools:visibility="visible"
        >
<!--humidityIV    -->
        <ImageView
            android:id="@+id/humidityIV"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/v_humidity"
            app:tint="@color/colorSecondary"
            android:background="@drawable/v_humidity_bg"
            android:contentDescription="@string/humidity_content_description"
            />
<!--humidityTextView   -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/humidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary"
            android:text="@string/humidity"

            android:shadowRadius="15"
            android:shadowColor="@android:color/background_dark"
            android:shadowDx="4"
            android:shadowDy="4"

            tools:text="85%"
            tools:ignore="SpUsage"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pressureLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintStart_toEndOf="@id/humidityLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/windLL"

        android:visibility="invisible"
        tools:visibility="visible"
        >
<!--pressureIV    -->
        <ImageView
            android:id="@+id/pressureIV"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/v_pressure"
            app:tint="@color/colorSecondary"
            android:background="@drawable/v_pressure_bg"
            android:contentDescription="@string/pressure"
            />
<!--pressureTextView   -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary"
            android:text="@string/humidity"

            android:shadowRadius="15"
            android:shadowColor="@android:color/background_dark"
            android:shadowDx="4"
            android:shadowDy="4"

            tools:text="753mmHg"
            tools:ignore="SpUsage"
            />
    </LinearLayout>
<!--dayStampRecyclerView-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dayStampRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/windLL"
            tools:listitem="@layout/timestamp_layout"

            android:visibility="invisible"
            tools:visibility="visible"
            />

<!--forecastRecyclerView    -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/forecastRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            android:layout_marginTop="24dp"

            app:layout_constraintTop_toBottomOf="@id/dayStampRecyclerView"
            tools:listitem="@layout/day_stamp_item"

            android:visibility="invisible"
            tools:visibility="visible"
            />

</androidx.constraintlayout.widget.ConstraintLayout>